2010-08-09  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #15403: Missing icons in workspace modules (swap version) (Thanks to Georg Ringer)
	* Follow-up to bug #15079 : Change private to protected
	* Fixed bug #15397: Fix special chars in class.t3lib_div.php

2010-08-09  Christian Kuhn  <lolli@schwarzbu.ch>

	* Follow-up to bug #15104: Fixed parse error

2010-08-08  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #15079 Feature: TYPO3 misses an SpriteGenerator (Thanks to Steffen Ritter)

2010-08-08  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #12535: DAM-related: Element browser crashes as where-clause cannot be parsed

2010-08-08  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #15104: Validation erros in tstemplate (Thanks to Georg Ringer)
	* Fixed bug #15394: Improve t3lib_SpriteManager code comments
	* Fixed bug #7901: Workaround for PHP bug with Locale tr_TR (Thanks to Reinhard Führicht)

2010-08-08  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #14952: Opendocs Module relies on taskcenter_recent causing fatal error with new taskcenter (thanks to Georg Ringer and Philipp Gampe)
	* Fixed bug #15131: Linebreaks do not work anymore using '--linebreak--' in palettes (thanks to Caspar Stuebs)
	* Fixed bug #15014: Switching workspaces does not reload frames in IE6 (thanks to Andreas Kiessling)

2010-08-07  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #15386: [Caching framework] Remove needless constant in cache manager

2010-08-05  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #15355: htmlArea RTE: Using the advanded frontend editing, the editor is not loaded in the text tab

2010-08-05  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #12646: Click on icon does not open/close sections

2010-08-05  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #14773: Styling issue when selecting position of new created page

2010-08-05  Jeff Segars  <jeff@webempoweredchurch.org>
