@@ -1,7 +1,8 @@
 2010-08-09  Steffen Kamper  <steffen@typo3.org>
 
+	* Follow-up to bug #15079: Add XCLASS-definitions to spritemanager classes
 	* Fixed bug #15403: Missing icons in workspace modules (swap version) (Thanks to Georg Ringer)
-	* Follow-up to bug #15079 : Change private to protected
+	* Follow-up to bug #15079: Change private to protected
 	* Fixed bug #15397: Fix special chars in class.t3lib_div.php
 
 2010-08-09  Christian Kuhn  <lolli@schwarzbu.ch>
